@@ -61,7 +61,7 @@ int main (int argc, char **argv)
   dc1394camera_list_t * list;
 
   d = dc1394_new ();
-  if (dc1394_enumerate_cameras (d, &list) != DC1394_SUCCESS) {
+  if (dc1394_camera_enumerate (d, &list) != DC1394_SUCCESS) {
     fprintf (stderr, "Failed to enumerate cameras\n");
     return 1;
   }
@@ -77,20 +77,20 @@ int main (int argc, char **argv)
       list_cameras (d, list);
     else
       print_usage();
-    dc1394_free_camera_list (list);
+    dc1394_camera_free_list (list);
     dc1394_free (d);
     return 0;
   } else if (argc == 3) {
     if (!strcmp (argv[1], "--guid")) {
       if (sscanf (argv[2], "0x%"PRIx64, &guid) == 1) {
       } else {
-        dc1394_free_camera_list (list);
+        dc1394_camera_free_list (list);
         dc1394_free (d);
         return print_usage();
       }
     }
   } else if (argc != 1) {
-    dc1394_free_camera_list (list);
+    dc1394_camera_free_list (list);
     dc1394_free (d);
     return print_usage();
   }
@@ -109,11 +109,11 @@ int main (int argc, char **argv)
     printf ("I: found camera with guid 0x%"PRIx64"\n", guid);
   }
 
-  dc1394_print_camera_info (camera);
+  dc1394_camera_print_info (camera);
   printf ("\nSFF feature info:\n");
   dc1394_basler_sff_feature_print_all (camera);  
   dc1394_camera_free (camera);
-  dc1394_free_camera_list (list);
+  dc1394_camera_free_list (list);
   dc1394_free (d);
   return 0;
 }
