@@ -21,7 +21,7 @@ int main(int argc, char *argv[])
   dc1394camera_list_t * list;
 
   d = dc1394_new ();
-  if (dc1394_enumerate_cameras (d, &list) != DC1394_SUCCESS) {
+  if (dc1394_camera_enumerate (d, &list) != DC1394_SUCCESS) {
     fprintf (stderr, "Failed to enumerate cameras\n");
     return 1;
   }
@@ -37,7 +37,7 @@ int main(int argc, char *argv[])
         list->ids[0].guid);
     return 1;
   }
-  dc1394_free_camera_list (list);
+  dc1394_camera_free_list (list);
 
   printf ("Using camera with guid %"PRIx64"\n", camera->guid);
   
