@@ -48,7 +48,7 @@ int main(int argc, char *argv[])
   int err;
 
   d = dc1394_new ();
-  if (dc1394_enumerate_cameras (d, &list) != DC1394_SUCCESS) {
+  if (dc1394_camera_enumerate (d, &list) != DC1394_SUCCESS) {
     fprintf (stderr, "Failed to enumerate cameras\n");
     return 1;
   }
@@ -64,7 +64,7 @@ int main(int argc, char *argv[])
         list->ids[0].guid);
     return 1;
   }
-  dc1394_free_camera_list (list);
+  dc1394_camera_free_list (list);
 
   printf("Using camera with GUID %"PRIx64"\n", camera->guid);
 
